# hssdlgame

./: .gitignore  HsSdlTest.hs  hssdl.cabal
images/: sprites.acorn  text.acorn
src/: HsSdlTest.hs  HsSdlTest_stub.c  HsSdlTest_stub.h  c_main.c
src/MGameLib/: Coordinates.hs  Text.hs  Tile.hs
src/TheGame/: Entity.hs  Monad.hs  State.hs
