Name:HsSdlTest
Version:0.1
Cabal-Version: >= 1.2
License:MIT
Author:Mike Verdone
Homepage:
Category:
Synopsis:A Haskell SDL example that builds and runs on OS X
Build-Type: Simple

Executable sdltest
  Hs-Source-Dirs: src
  C-Sources: src/c_main.c
  Main-Is: HsSdlTest.hs
  pkgconfig-depends: sdl
  Ghc-options: -no-hs-main
  Build-Depends: base >= 4
               , random >= 1.0
               , mtl >= 2.0
               , SDL >= 0.6
               , SDL-image >= 0.6
